k8s/minikube/demo-pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-tester
  namespace: demo
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: demo-pvc
