k8s/minikube/wp-demo1-backup-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wp-demo1-backup-debug
  namespace: wp-demo1
spec:
  containers:
    - name: debug
      image: bitnami/mariadb:latest
      command: ["tail", "-f", "/dev/null"]
      volumeMounts:
        - name: backup
          mountPath: /backups
  volumes:
    - name: backup
      persistentVolumeClaim:
        claimName: wp-demo1-backup
